# Basic-2D-Renderer-OpenGL-

./: CMakeLists.txt  README.md
include/custom/: core.h  init.h  renderer.h  shader.h  texture.h
include/custom/buffer/: bufferLayout.h  indexBuffer.h  vertexArray.h  vertexBuffer.h
include/glad/: glad.h
src/: glad.c  init.cpp  main.cpp
src/buffers/: bufferLayout.cpp  indexBuffer.cpp  vertexArray.cpp  vertexBuffer.cpp
src/renderer/: renderer.cpp
src/shader/: shader.cpp
src/shader/code/: fragmentShader.fs  vertexShader.vs
src/texture/: texture.cpp
